[package]
name = "creta-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "updater"
path = "src/updater.rs"

[[bin]]
name = "eup"
path = "src/eup.rs"

[dependencies]
clap = "4.1.6"
walkdir = "2.3.2"
zip = "0.6.4"

[profile.release]
panic = "abort"
